[package]
name = "space"
version = "0.1.0"
authors = ["Joshua M. Clulow <josh@sysmgr.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
jmclib = { git = "https://github.com/jclulow/rust-jmclib" }
